# uow-lib

./: .gitignore  LICENSE  README.md  pyproject.toml
src/uow/: __init__.py  _entry.py  children.py  collections.py  exceptions.py  flush.py  identity.py  instrumentation.py  mapper.py  tracking.py  uow.py  wrapping.py
tests/: conftest.py  test_change_tracker.py  test_collection_of_embedded.py  test_collection_replacement.py  test_dataclass_id_entity.py  test_embedded_of.py  test_exclude_attrs.py  test_parent_key.py  test_plain_class_entity.py  test_primitive_collections.py  test_tracked_list.py  test_uow.py
