[tool.poetry]
name = "uow-lib"
version = "0.1.0"
description = ""
authors = ["Сократ"]
readme = "README.md"
packages = [{include = "uow", from = "src"}]

[tool.poetry.dependencies]
python = "^3.14"


[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"

[tool.mypy]
mypy_path = "src"
strict = true
warn_unreachable = true
show_column_numbers = true
show_error_context = true
check_untyped_defs = true
ignore_missing_imports = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
