[tool.poetry]
name = "uow-lib"
version = "0.1.2"
description = "Generic Unit of Work pattern implementation for Python"
license = "MIT"
authors = ["Sokrat Magomedov"]
readme = "README.md"
keywords = ["unit-of-work", "uow", "repository-pattern"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
packages = [{include = "uow", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12"


[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"

[tool.mypy]
mypy_path = "src"
strict = true
warn_unreachable = true
show_column_numbers = true
show_error_context = true
check_untyped_defs = true
ignore_missing_imports = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
